# mcp-server-bold

./: README.md  extension.toml  pyproject.toml
.github/workflows/: pylint.yml
src/mcp_server_bold/: __init__.py  __main__.py  server.py
