[project]
name = "mcp-server-bold"
version = "0.2.1"
description = "Local MCP server for providing LLMs access to BOLD database through Rest API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.0",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "mcp==1.0.0",
    "pathlib==1.0.1",
    "pydantic==2.10.2",
    "pydantic_core==2.27.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "sse-starlette==2.1.3",
    "starlette==0.41.3",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.1",
    "xmltodict==0.14.2",
]

[project.scripts]
mcp-server-bold = "mcp_server_bold:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
